--- a/stylus/global.styl
+++ b/stylus/global.styl
@@ -1,3 +1,16 @@
+@font-face
+   font-family Roboto
+   font-style normal
+   src url(../fonts/Roboto.woff) format('woff')
+   src url(../fonts/Roboto.woff2) format('woff2')
+
+@font-face
+   font-family Roboto Bold
+   font-style bold
+   src url(../fonts/Roboto-Bold.woff) format('woff')
+   src url(../fonts/Roboto-Bold.woff2) format('woff2')
+
+
 *
   padding 0
   margin 0
@@ -9,6 +22,9 @@ body
    background-color #F5F5F5
    font-family 'Roboto', sans-serif
    letter-spacing 0.15px
+
+.open-menu
+   overflow hidden
    
 a
    text-decoration none
@@ -31,7 +47,7 @@ ul, li
 .main-btn
     padding 15px 35px
     font-size 12px
-    font-weight weight-bold
+    font-family font-bold
     color #FFFFFF
     background-color color-secondary
     border 2px solid color-secondary
@@ -52,7 +68,7 @@ ul, li
 .title
    {flexColumn}
    max-width 583px
-   font-weight weight-bold
+   font-family font-bold
    font-size 36px
    line-height 42px
 
@@ -64,7 +80,7 @@ ul, li
    span
       margin 0 0 30px 0
       font-size 12px
-      font-weight weight-bold
+      font-family font-bold
       letter-spacing 2.5px
       line-height 24px
       text-transform uppercase
