--- a/css/style.css
+++ b/css/style.css
@@ -921,6 +921,7 @@ h2 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    padding: 7px 0 0 0;
   }
 
   .header__contacts {
@@ -1025,7 +1026,7 @@ h2 {
   }
 
   h1 {
-    margin: 190px 0 48px 0;
+    margin: 190px 0 48px;
     max-width: 450px;
     font-size: 42px;
     line-height: 48px;
@@ -1033,5 +1034,28 @@ h2 {
 
   .box-about {
     padding: 50px 50px 0;
+  }
+}
+
+@media (max-width:425px) {
+  .title {
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  h1 {
+    margin: 150px 0 35px;
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .box-about {
+    padding: 50px 30px 0;
+    margin: 0 0 180px 0;
+    min-height: 400px;
+  }
+
+  .box-about__img {
+    margin: 30px 0 -90px 0;
   }
 }
