--- a/stylus/about.styl
+++ b/stylus/about.styl
@@ -18,13 +18,23 @@
     @media (max-width: 600px)
         padding 50px 50px 0
 
+    @media (max-width: 425px)
+        padding 50px 30px 0
+        margin 0 0 180px 0
+        min-height 400px
+
 
     &__text
         margin 40px 0 0 0
         line-height 24px
         color #F5F5F5
+        
     &__img
         margin 60px 0 -120px 0
+
+        @media (max-width: 425px)
+            margin 30px 0 -90px 0
+
 
         img
             border-radius 40px
