--- a/stylus/global.styl
+++ b/stylus/global.styl
@@ -76,6 +76,10 @@ ul, li
       font-size 26px
       line-height 32px
 
+   @media (max-width: 425px)
+      font-size 20px
+      line-height 25px
+
       
    span
       margin 0 0 30px 0
