--- a/stylus/header.styl
+++ b/stylus/header.styl
@@ -12,6 +12,7 @@ header
 
     @media (max-width: 600px)
         justify-content center
+        padding 7px 0 0 0
     
 .header__contacts,
 .header__hours,
@@ -82,7 +83,6 @@ header
 
         &.active span
             display none
-
 
 
 .panel-header
