--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -21,11 +21,16 @@ h1
     max-width 680px
     font-size 56px
     line-height 56px
-    font-weight weight-bold 
+    font-family font-bold 
     
 
     @media (max-width: 600px)
-      margin 190px 0 48px 0
+      margin 190px 0 48px
       max-width 450px
       font-size 42px
       line-height 48px
+
+    @media (max-width: 425px)
+      margin 150px 0 35px
+      font-size 36px
+      line-height 40px
