--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,10 @@ h3 {
   background-color: #29c3be;
 }
 
+.contact img {
+  max-width: 100%;
+}
+
 .contact__img {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -376,16 +380,13 @@ h3 {
           align-items: flex-start;
 }
 
-.contact__content h2 {
-  max-width: 411px;
-  margin: 0 0 30px 0;
-}
-
 .contact__box {
   margin: 140px 0 0 0;
 }
 
-h2 {
+.contact h2 {
+  max-width: 411px;
+  margin: 0 0 30px 0;
   font-family: 'Roboto Bold',sans-serif;
   font-size: 36px;
   line-height: 42px;
@@ -901,6 +902,13 @@ h2 {
   }
 }
 
+@media (max-width:768px) {
+  .contact h2 {
+    font-size: 26px;
+    line-height: 30px;
+  }
+}
+
 @media (max-width:717px) {
   .content-about__inner {
     margin: 20px 0 0 0;
@@ -1032,8 +1040,35 @@ h2 {
     line-height: 48px;
   }
 
+  .about {
+    margin: 0 auto 90px;
+  }
+
   .box-about {
     padding: 50px 50px 0;
+  }
+
+  .contact {
+    padding: 0 10px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .contact__img {
+    padding: 0;
+  }
+
+  .contact__content {
+    padding: 20px 0 0 0;
+  }
+
+  .contact__box {
+    display: none;
   }
 }
 
@@ -1057,5 +1092,10 @@ h2 {
 
   .box-about__img {
     margin: 30px 0 -90px 0;
+  }
+
+  .contact h2 {
+    font-size: 20px;
+    line-height: 26px;
   }
 }
