--- a/stylus/about.styl
+++ b/stylus/about.styl
@@ -3,6 +3,9 @@
     z-index 7
     position relative
 
+    @media (max-width: 600px)
+        margin 0 auto 90px
+
      
 .box-about
     {flexColumn}
