--- a/stylus/contact.styl
+++ b/stylus/contact.styl
@@ -1,24 +1,50 @@
 .contact
-     {spaceBetween}
-     margin 0 0 100px 0
-     background-color #29C3BE
+  {spaceBetween}
+  margin 0 0 100px 0
+  background-color #29C3BE
+
+  @media (max-width: 600px)
+    padding 0 10px
+    flex-direction column-reverse
+    align-items center
+
+
+  img
+    max-width 100%
      
-     &__img
-       display flex
-       padding 50px 0 0 0
+  &__img
+    display flex
+    padding 50px 0 0 0
+
+    @media (max-width: 600px)
+      padding 0
        
-     &__content
-       {flexColumn}
-       justify-content center
-       align-items flex-start
-       h2
-         max-width 411px
-         margin 0 0 30px 0
+  &__content
+    {flexColumn}
+    justify-content center
+    align-items flex-start
+
+    @media (max-width: 600px)
+      padding 20px 0 0 0
        
-      &__box
-        margin 140px 0 0 0
        
-   h2
-     font-weight weight-bold
-     font-size 36px
-     line-height 42px
+  &__box
+    margin 140px 0 0 0
+
+    @media (max-width: 600px)
+      display none
+       
+  h2
+    max-width 411px
+    margin 0 0 30px 0
+    font-family font-bold
+    font-size 36px
+    line-height 42px
+
+    @media (max-width: 768px)
+      font-size 26px
+      line-height 30px
+
+    @media (max-width: 425px)
+      font-size 20px
+      line-height 26px
