--- a/stylus/global.styl
+++ b/stylus/global.styl
@@ -99,3 +99,12 @@ ul, li
 .text
    color #4B4B4B
    line-height 24px
+
+h3
+   margin 0 0 20px 0
+   color color-secondary
+   font-size 19px
+   line-height 26px
+
+   @media (max-width: 425px)
+      font-size 18px
