--- a/stylus/connect.styl
+++ b/stylus/connect.styl
@@ -1,18 +1,27 @@
 .connect
    {flexCenter}
-   height 980px  
-   background url('../img/connect-bg.jpg') no-repeat
-   background-size 100%
+   min-height 980px  
+   background url('../img/connect-bg.jpg') center no-repeat 
+
+
+   &__content
+      {flexCenter}
+      align-items center
+      padding 0 10px
+   
         
    &__info
       max-width 324px
       text-align center
 
+      @media (max-width: 1024px)
+         display none
+
       p
          margin 0 0 45px 0
          font-size 30px
          line-height 36px
-         font-weight weight-bold
+         font-family font-bold
 
          &:last-child
           margin 40px 0 0 0
@@ -21,53 +30,75 @@
          
       span
          font-size 96px
-         font-weight weight-bold          
-          
-    
-   &__content
-      {flexCenter}
-      align-items center
-          
+         font-family font-bold         
+              
     
 .form-connect
-    max-width 585px 
-    margin 0 111px 0 0
-    padding 76px 57px
-    text-align center
-    background-color color-main
-    border-radius 40px
+   max-width 585px 
+   margin 0 111px 0 0
+   padding 76px 57px
+   text-align center
+   background-color color-main
+   border-radius 40px
+
+   @media (max-width: 1024px)
+      margin 0
+
+   @media (max-width: 425px)
+      padding 60px 30px
      
     h4
-       margin 0 0 40px 0
-       font-size 36px
-       line-height 42px
+      margin 0 0 40px 0
+      font-size 36px
+      line-height 42px
+
+      @media (max-width: 600px)
+         font-size 26px
+
+      @media (max-width: 425px)
+         font-size 20px
+         margin 0 0 20px 0
        
-    input, textarea
-       background-color color-main
-       color #fffff
-       border 1px solid #fff
-       opacity 0.8
-       padding 15px 0 15px 22px
-       border-radius 10px
-       &::placeholder
+   input, textarea
+      background-color color-main
+      color #fff
+      border 1px solid #fff
+      opacity 0.8
+      padding 15px 0 15px 22px
+      border-radius 10px
+
+      &:focus
+         outline-color #fff
+
+      &::placeholder
          color #fff
 
-    input
-       margin 0 0 22px 0
+
+   input
+      margin 0 0 22px 0
+      width 224px
+  
+       
+   &__box
+      {spaceBetween}
+
+      @media (max-width: 600px)
+         flex-direction column
+         align-items center
        
        
-    &__box
-       display flex
-       
-    &__item
-   
-       margin 0 23px 0 0
-       &:last-child
-         margin margin-child
-           
+   &__item
+      {flexColumn}
+         
       
-     textarea
-       resize none
-       width 470px
-       height 180px
-       margin 0 0 30px 0
+   textarea
+      resize none
+      width 470px
+      height 180px
+      margin 0 0 30px 0
+
+      @media (max-width: 600px)
+         width 280px
+
+      @media (max-width: 425px)
+         width 240px
