--- a/stylus/contact.styl
+++ b/stylus/contact.styl
@@ -4,13 +4,15 @@
   background-color #29C3BE
 
   @media (max-width: 600px)
-    padding 0 10px
     flex-direction column-reverse
     align-items center
 
 
   img
     max-width 100%
+
+    @media (max-width: 600px)
+      display none
      
   &__img
     display flex
@@ -25,7 +27,9 @@
     align-items flex-start
 
     @media (max-width: 600px)
-      padding 20px 0 0 0
+      padding 20px 0
+      align-items center
+      text-align center
        
        
   &__box
