Responsive reviews section

--- a/stylus/galery.styl
+++ b/stylus/galery.styl
@@ -2,8 +2,18 @@
     margin 0 0 220px 0
     padding 0 10px
 
+    @media (max-width: 768px)
+        margin 0 0 150px 0
+
     @media (max-width: 600px)
-        margin 40px 0 220px
+        margin 40px 0 120px
+
+    @media (max-width: 425px)
+        margin 40px 0 160px
+
+    @media (max-width: 320px)
+        margin 40px 0 120px
+
 
     &__inner
         margin -100px auto 0 
