--- a/css/style.css
+++ b/css/style.css
@@ -664,9 +664,15 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  spanmargin-left: 17px;
+}
+
+.reviews__box span {
   color: #f2726f;
   font-family: 'Roboto Bold',sans-serif;
+}
+
+.reviews__box img {
+  margin: 0 17px 0 0;
 }
 
 ._max-width {
@@ -919,6 +925,26 @@ h1 {
   }
 }
 
+@media (max-width:950px) {
+  .reviews__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .reviews__inner {
+    margin: 30px 0 0 0;
+  }
+
+  ._max-width {
+    max-width: 100%;
+  }
+}
+
 @media (max-width:825px) {
   .galery__tabs {
     margin: 35px 0 0 0;
@@ -952,6 +978,10 @@ h1 {
     font-size: 26px;
     line-height: 30px;
   }
+
+  .galery {
+    margin: 0 0 150px 0;
+  }
 }
 
 @media (max-width:717px) {
@@ -961,6 +991,22 @@ h1 {
 
   .content-about__item {
     margin: 40px 0 0 0;
+  }
+}
+
+@media (max-width:690px) {
+  .reviews__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .reviews__item {
+    margin: 0 0 25px 0;
   }
 }
 
@@ -1142,7 +1188,7 @@ h1 {
   }
 
   .galery {
-    margin: 40px 0 220px;
+    margin: 40px 0 120px;
   }
 
   .galery__inner {
@@ -1195,6 +1241,10 @@ h1 {
     width: 240px;
   }
 
+  .galery {
+    margin: 40px 0 160px;
+  }
+
   .galery__inner {
     padding: 70px 10px 0;
   }
@@ -1213,5 +1263,15 @@ h1 {
 @media (max-width:375px) {
   .services__item {
     padding: 40px 30px;
+  }
+
+  .reviews__item {
+    padding: 40px 30px 30px;
+  }
+}
+
+@media (max-width:320px) {
+  .galery {
+    margin: 40px 0 120px;
   }
 }
