--- a/stylus/reviews.styl
+++ b/stylus/reviews.styl
@@ -3,9 +3,21 @@
     
     &__content
         display flex
+
+        @media (max-width: 950px)
+            flex-direction column
+            align-items center
          
     &__inner
         display flex
+
+        @media (max-width: 950px)
+            margin 30px 0 0 0
+
+        @media (max-width: 690px)
+            flex-direction column
+            justify-content center
+
         
     &__item
         max-width 324px
@@ -21,15 +33,28 @@
         p
             margin 0 0 30px 0
             color #4B4B4B
+
+        @media (max-width: 690px)
+            margin 0 0 25px 0
+            
+
+        @media (max-width: 375px)
+            padding 40px 30px 30px
+
            
     &__box
         display flex
         align-items center
            
         span
-        margin-left 17px
-        color color-secondary
-        font-weight weight-bold
+            color color-secondary
+            font-family font-bold
+
+        img
+            margin 0 17px 0 0
            
 ._max-width
     max-width 324px
+
+    @media (max-width: 950px)
+        max-width 100%
