--- a/stylus/reviews.styl
+++ b/stylus/reviews.styl
@@ -1,5 +1,12 @@
 .reviews
     margin 0 0 210px 0
+
+    @media (max-width: 768px)
+        margin 0 0 160px 0
+
+    @media (max-width: 425px)
+        margin 0 0 120px 0
+
     
     &__content
         display flex
