--- a/stylus/impact.styl
+++ b/stylus/impact.styl
@@ -1,4 +1,5 @@
 .impact
+    padding 0 10px
     min-height 608px
     background-color #29C3BE
          
@@ -8,31 +9,62 @@
     &__title
         display flex
         margin 0 0 80px 0
+
+        @media (max-width: 986px)
+            margin 0 0 50px 0
            
         img
-            margin -200px 0 0 0
+            margin -180px 0 0 0
+            border-radius 40px
+
+            @media (max-width: 1024px)
+                margin -160px 0 0 0
+
+            @media (max-width: 768px)
+                display none
+            
            
     &__item
         display flex
         span
             font-size 36px
             line-height 42px
-            font-weight weight-bold
+            font-family font-bold
              
         p
             font-size 16px
             line-height 24px
-            font-weight weight-bold
+            font-family font-bold
             color color-main
              
     &__inner
         display flex
+
+        @media (max-width: 986px)
+            flex-wrap wrap
+            justify-content center
+
+        @media (max-width: 465px)
+            flex-direction column
+            align-items center
          
            
     &__item
         margin 0 80px 0 0
         &:last-child
             margin margin-child
+
+        @media (max-width: 986px)
+            margin 30px 80px 0 0
+
+            &:last-child
+                margin 30px 0 0 0
+
+        @media (max-width: 768px)
+            margin 30px 40px 0 0
+
+        @media (max-width: 465px)
+            margin 30px 0 0 0
              
     &__box
         {flexColumn}
