--- a/stylus/footer.styl
+++ b/stylus/footer.styl
@@ -1,4 +1,7 @@
 .footer
+    &__inner
+        padding 0 10px
+    
     &__panel
         {spaceBetween}
         margin -75px auto 0 
@@ -6,11 +9,32 @@
         background-color color-main
         border-radius 20px
 
+        @media (max-width: 810px)
+            padding 35px
+
+        @media (max-width: 465px)
+            flex-direction column
+            align-items center
+            margin -20px auto 0
+            padding 20px
+
         p
+            padding 0 10px 0 0
             max-width 510px
-            font-weight weight-bold
+            font-family font-bold
             font-size 24px
             line-height 30px
+
+            @media (max-width: 676px)
+                font-size 18px
+                line-height 20px
+
+            @media (max-width: 465px)
+                margin 0 0 10px 0
+                padding 0
+
+            @media (max-width: 320px)
+                font-size 16px
 
 .content-footer
     {spaceBetween}
@@ -18,6 +42,14 @@
     color #4B4B4B
     font-size 14px
     line-height 22px
+
+    @media (max-width: 676px)
+        flex-wrap wrap
+        justify-content center
+
+    @media (max-width: 465px)
+        flex-direction column
+        align-items center
 
     &__inner
         img
@@ -32,38 +64,63 @@
         display flex
         align-items center
 
+        @media (max-width: 465px)
+            justify-content center
+
         img 
             margin 0 18px 0 0
-            // &:last-child
-            //     margin child
 
 
     &__navigate
-        font-weight weight-bold
+        padding 0 20px
+        font-family font-bold
+
+        @media (max-width: 465px)
+            padding 0
+            margin 30px 0 0 0
+            text-align center
 
         p
             margin 0 0 28px 0
             text-transform uppercase
 
     &__menu
-        display flex
-
+        display flex  
+        
 
     &__items
         margin 0 130px 0 0
         &:last-child
             margin margin-child
 
+        @media (max-width: 810px)
+            margin 0 50px 0 0
+
+        @media (max-width: 465px)
+            margin 0 70px 0 0
+
+
     &__link
         margin 0 0 11px 0
+        
         &:last-child
             margin margin-child
-            
+
+        a
+            color #4B4B4B
+
+    &__contacts
+        @media (max-width: 676px)
+            margin 30px 0 0 0
+
 
     &__title
         margin 0 0 28px 0
-        font-weight weight-bold 
+        font-family font-bold
         text-transform uppercase
+
+        @media (max-width: 465px)
+            text-align center
 
     &__box
         display flex
@@ -78,8 +135,6 @@
         img 
             margin 0 18px 0 0
 
-        
-
 
 .sign-footer
     background-color color-main
@@ -89,4 +144,13 @@
 
     &__inner
         {spaceBetween}
-        padding 20px 0
+        padding 20px 10px
+
+        @media (max-width: 676px)
+            flex-direction column
+            align-items center
+            text-align center
+
+            p
+                &:first-child
+                    margin 0 0 10px 0
