--- a/stylus/services.styl
+++ b/stylus/services.styl
@@ -24,6 +24,11 @@
       @media (max-width: 375px)
         padding 40px 30px
 
+      &:focus
+        outline none
+        box-shadow 0px 11px 8px 8px rgba(34, 60, 80, 0.2)
+
+
       &:hover
         box-shadow 0px 11px 8px 8px rgba(34, 60, 80, 0.2)
         transition 0.4s
