--- a/stylus/galery.styl
+++ b/stylus/galery.styl
@@ -53,7 +53,7 @@
             align-items center
 
     &__item
-        padding 0 20px 15px
+        padding 10px 20px 15px
         cursor pointer  
 
         @media (max-width: 825px)
@@ -65,7 +65,8 @@
             font-family font-bold  
 
         &:focus
-            outline-color #fff   
+            outline-color #fff
+            outline-style dashed   
 
     &__img
         display none
