--- a/stylus/global.styl
+++ b/stylus/global.styl
@@ -32,6 +32,7 @@ a
 
    &:focus
        outline-color color-main
+       outline-style dashed 
 
    @media (min-width: 768px) 
       &:hover
@@ -101,6 +102,7 @@ ul, li
 
       &:focus
          outline-color #fff
+         outline-style dashed  
       
 ._black
    p
@@ -110,6 +112,7 @@ ul, li
 
       &:focus
          outline-color color-main
+         outline-style dashed  
 
 
 .text
