--- a/stylus/header.styl
+++ b/stylus/header.styl
@@ -150,6 +150,10 @@ details > summary
     list-style none
     cursor pointer
 
+    &:focus
+       outline-color color-main
+       outline-style dashed 
+
     @media (min-width: 768px)
         &:hover
             text-decoration underline
