--- a/stylus/footer.styl
+++ b/stylus/footer.styl
@@ -67,8 +67,9 @@
         @media (max-width: 465px)
             justify-content center
 
-        img 
+        a 
             margin 0 18px 0 0
+
 
 
     &__navigate
