--- a/stylus/global.styl
+++ b/stylus/global.styl
@@ -22,6 +22,7 @@ body
    background-color #F5F5F5
    font-family 'Roboto', sans-serif
    letter-spacing 0.15px
+   
 
 .open-menu
    overflow hidden
@@ -79,7 +80,6 @@ ul, li
    {flexColumn}
    max-width 583px
    font-family font-bold
-   font-size 36px
    line-height 42px
 
    @media (max-width: 600px)
@@ -89,6 +89,9 @@ ul, li
    @media (max-width: 425px)
       font-size 20px
       line-height 25px
+
+   h2
+      font-size 36px
 
       
    span
@@ -105,7 +108,7 @@ ul, li
          outline-style dashed  
       
 ._black
-   p
+   h2
       color #000000
    span
       color color-main
