--- a/stylus/connect.styl
+++ b/stylus/connect.styl
@@ -1,7 +1,7 @@
 .connect
    {flexCenter}
    min-height 980px  
-   background url('../img/connect-bg.jpg') center no-repeat 
+   background url('../img/connect-bg.jpg') center / cover no-repeat 
 
 
    &__content
