--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -1,6 +1,14 @@
 .main
     margin 0 0 120px 0
     
+    @media (min-height: 667px)
+      margin 0 0 210px 0
+
+    @media (max-height: 400px) and (orientation: landscape)
+      margin 0 0 100px 0
+
+    @media (max-height: 320px) and (orientation: landscape)
+      margin 0 0 30px 0
     
     &__bg img
       position absolute
@@ -14,7 +22,7 @@
     
     &__content
       z-index 4
-      position relative   
+      position relative  
     
 h1
     margin 0 0 48px 0
@@ -22,7 +30,9 @@ h1
     font-size 56px
     line-height 56px
     font-family font-bold 
-    
+
+    @media (min-height: 730px) and (orientation: portrait)
+      margin 250px 0 48px
 
     @media (max-width: 600px)
       margin 190px 0 48px
@@ -30,7 +40,12 @@ h1
       font-size 42px
       line-height 48px
 
-    @media (max-width: 425px)
+    @media (max-height: 500px) and (orientation: landscape)
+      margin 100px 0 20px
+      font-size 32px
+      line-height 28px
+
+    @media (max-width: 425px) 
       margin 150px 0 35px
       font-size 36px
       line-height 40px
