--- a/css/style.css
+++ b/css/style.css
@@ -1151,7 +1151,7 @@ h1 {
 }
 
 @media (max-width:600px) {
-  .title {
+  .title h2 {
     font-size: 26px;
     line-height: 32px;
   }
@@ -1417,7 +1417,7 @@ h1 {
 }
 
 @media (max-width:425px) {
-  .title {
+  .title h2 {
     font-size: 20px;
     line-height: 25px;
   }
