--- a/source/pug/base/layout.pug
+++ b/source/pug/base/layout.pug
@@ -16,6 +16,7 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="description", content="DogCare")
     link(rel="stylesheet", href="css/style.min.css")
+    link(rel="stylesheet", href="css/aos.css")
 
   body
     +sprite()
