--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -12,5 +12,9 @@ block main
     include ../blocks/about
     include ../blocks/contact
     include ../blocks/services
+    include ../blocks/connect
+    include ../blocks/galery
+    include ../blocks/reviews
+    include ../blocks/impact
 
 
