--- a/source/stylus/style.styl
+++ b/source/stylus/style.styl
@@ -12,3 +12,10 @@
 @import 'contact'
 @import 'services'
 @import 'content-about'
+@import 'connect'
+@import 'form-connect'
+@import 'galery'
+@import 'reviews'
+@import 'impact'
+@import 'footer'
+@import 'content-footer'
