--- a/source/stylus/services.styl
+++ b/source/stylus/services.styl
@@ -1,5 +1,8 @@
 .services
-    margin  0 auto 120px 
+    margin  0 auto 120px
+
+    @media (max-width: 600px)
+      margin-bottom 70px
     
     &__content
       display grid
