fix: background of main block

--- a/source/stylus/main.styl
+++ b/source/stylus/main.styl
@@ -1,6 +1,7 @@
 .main
     padding-top 250px
     margin-bottom 120px
+    background-color #2CC0BE
 
     @media (max-width: 600px)
       padding-top 150px
